Update to 2022 Vidi template

--- a/1_general_information.tex
+++ b/1_general_information.tex
@@ -1,18 +1,4 @@
-\section{General information}
-
-\subsection{Title of the research proposal}\label{sec:title}
-
-
-\subsection{Scientific summary of research proposal}\label{sec:summary}
-
-(Max. 300 words. \textbf{Identical to the abstract in ISAAC})\\
-
-Word count \ref{sec:summary}:
-
-
-\subsection{Keywords}\label{sec:keywords}
-
-(Max. five keywords)
+\section{Institution and field of research}
 
 \subsection{NWO domain (Choose \ul{one})}\label{sec:domain}
 
@@ -20,6 +6,17 @@ Word count \ref{sec:summary}:
 \checkbox Social Sciences and Humanities (SSH/SGW)\\
 \checkedbox Science (ENW)
 
+\subsection{Title of the research proposal}\label{sec:title}
+
+\subsection{Summary}\label{sec:summary}
+
+(Max. 300 words. \textbf{Identical to the abstract in ISAAC})\\
+
+Word count \ref{sec:summary}:
+
+\subsection{Keywords}\label{sec:keywords}
+
+(Max. five keywords)
 
 \subsection{Main field of research}\label{sec:mainfield}
 
@@ -42,7 +39,7 @@ Word count \ref{sec:summary}:
 \end{center}
 
 
-\subsection{Public summary of your research proposal}\label{sec:popsummary}
+\subsection{Public summary}\label{sec:popsummary}
 %Please provide both an English (ENG) and a Dutch (NL) version (max. fifty words each), including an English and Dutch popular title. 
 %Please see the Explanatory Notes above for the requested format and examples of public summaries.\\
 
@@ -55,14 +52,14 @@ Word count \ref{sec:summary}:
     \end{tabular}
     \begin{tabular}{|m{140mm}|}
         \hline
-        \textbf{Titel}\\
+        \rowcolor{nwoshade} \textbf{\nth{Projecttitel}}\\
         \hline
-        \textit{} \\
+        \rowcolor{nwoshade} \textit{\nth{Academische titel(s), Initialen, Achternaam, Beoogd gastinstituut}} \\
         \hline
         Publiekssamenvatting \\
         \\
         \hline
-        Wordcount: \\
+        \rowcolor{nwoshade} \nth{Wordcount}: \\
         \hline
     \end{tabular}
 \end{center}
@@ -77,14 +74,21 @@ Word count \ref{sec:summary}:
     \end{tabular}
     \begin{tabular}{|m{140mm}|}
         \hline
-        \textbf{Title}\\
+        \rowcolor{nwoshade} \textbf{\nth{Project title}}\\
         \hline
-        \textit{} \\
+        \rowcolor{nwoshade} \textit{\nth{Academic title(s), Initials, Surname, Prospective host institute}} \\
         \hline
         Public summary \\
         \\
         \hline
-        Wordcount: 50 words\\
+        \rowcolor{nwoshade} \nth{Wordcount}: \\
         \hline
     \end{tabular}
 \end{center}
+
+%%% Local Variables: 
+%%% coding: utf-8
+%%% mode: latex
+%%% TeX-engine: xetex
+%%% TeX-master: "NWO_template"
+%%% End: 
