--- a/2_research_proposal.tex
+++ b/2_research_proposal.tex
@@ -1,6 +1,6 @@
 \section{Research proposal}\label{sec:proposal}
 
-\subsection{Description of the proposed research (weight 40\%)}\label{sec:research}
+\subsection{Description of the proposed research}\label{sec:research}
 
 \subsubsection{Overall aim and key objective}\label{sec:aim}
 
@@ -19,41 +19,28 @@ Text \cite{clarke2018}.
 \subsubsection{Motivation for choice of institute}\label{sec:institute}
 
 
-\vfill
-\vspace{\baselineskip}
-(\ref{sec:aim}, \ref{sec:plan}, and \ref{sec:institute} combined total: max. 2,000 words on max. six pages)\\
-
-Total word count \ref{sec:aim}, \ref{sec:plan}, and \ref{sec:institute}: \\
-
 %---------------------------------------------------------
 
 \newpage
-\subsection{Knowledge utilisation (weight 20\%)}\label{sec:KU}
-\checkedbox[0pt] Yes, this proposal has the potential of knowledge utilization\\
-\checkbox[0pt] No, this proposal has no direct knowledge utilization\\
+\subsection{Scientific and/or societal impact of the proposed project}\label{sec:KU}
+% Describe the proposed impact of the research within the stated maximum number of words  (max. 1,000 words, please see the Explanatory Notes for further explanations).
 
-%\textbf{If yes}, please describe the potential of knowledge utilization, including: \vspace{-6pt}
-%\begin{itemize}
-%    \item[--] Contribution to society and/or other scientific areas;
-%    \item[--] Disciplines and organisations that might benefit from the results.
-%\end{itemize}
+% Choose one of these:
+Primary focus on scientific impact
+% Scientific and societal impact are of comparable focus
+% Primary focus on societal impact
 
-%Additionally, describe the implementation, including: \vspace{-6pt}
-%\begin{itemize}
-%    \item[--] Action plan to allow the outcomes of the research project to benefit the potential knowledge users;
-%    \item[--] If and how the potential knowledge users will be involved;
-%    \item[--] (concrete) outcomes for society and/or other academic disciplines;
-%    \item[--] The period over which knowledge utilisation is expected to occur.
-%\end{itemize}
+% Please elaborate on the scientific and/or societal impact of the proposed project:
+% When writing, please consider the following points:
+%     • Motivate your choice for the focus on scientific and/or societal impact;
+%     • Elaborate on and motivate all applicable parts of the criteria for the chosen form of impact (see call for proposals);
+%     • If applicable: indicate how attention will be paid to the non-chosen form of impact (thus, even if the focus is on scientific impact, the applicant should still describe how they will pay attention to possible or unforeseen societal impact of the research, and vice versa).
 
-%\textbf{If no}, please motivate why your proposal has no direct knowledge utilization.\\
-%\vspace{\baselineskip}
+\subsection{Number of words}\label{sec:proposal}
+% Indicate the number of words used. Words in references, footnotes, figures, figure captions and tables should be included in the count.
 
-\vfill
-\vspace{\baselineskip}
-(\ref{sec:KU}: max. 700 words on max. 2 pages)\\
-
-Word count \ref{sec:KU}:
+Section 2a: Wordcount:     (max. 4,000)\\
+Section 2b: Wordcount:     (max. 1,000)
 
 %---------------------------------------------------------
 
@@ -69,33 +56,30 @@ Word count \ref{sec:KU}:
 \subsection{Data management}\label{sec:dataman}
 
 \begin{enumerate}
-    \item Will this project involve re-using existing research data?
-    \item[] \checkedbox[1em] Yes: Are there any constraints on its re-use?
-    \item[] \checkbox[1em] No: Have you considered re-using existing data but discarded the possibility? Why?
-    \vspace{6pt}
-    
-%    \item[] If no, please briefly explain why; if yes, state any constraints on re-use of existing data if there are any.
-%    \vspace{6pt}
-    
-    \item[] Text.
-    \vspace{6pt}
-    
     \item Will data be collected or generated that are suitable for reuse?
-    \item[] \checkedbox[1em] Yes: Please answer questions 3 and 4.
-    \item[] \checkbox[1em] No: Please explain why the research will not result in reusable data or in data that cannot be stored or
-    \item[] \hspace*{3.4em}data that for other reasons are not relevant for reuse. 
+    \item[] \checkedbox[1em] Yes: Then answer questions 2 to 4.
+    \item[] \checkbox[1em] No: Then explain why the research will not result in reusable data or in data that cannot be stored or data that for other reasons are not relevant for reuse.
     \vspace{6pt}
-    
-    \item After the project has been completed, how will the data be stored for the long-term and made available for the use by third parties? Are there possible restrictions to data sharing or embargo reasons? Please state these here.%
+    \item Where will the data be stored during the research?
     \vspace{6pt}
-    
     \item[] Text.
     \vspace{6pt}
-    
-    \item Will any costs (financial and time) related to data management and sharing/preservation be incurred?
-    \item[] \checkbox[1em] Yes: Then please be sure to specify the associated expenses in the budget table of this proposal.
-    \item[] \checkedbox[1em] No: All the necessary resources (financial and time) to store and prepare data for sharing/preservation
-    \item[] \hspace*{3.4em}are or will be available at no extra cost.
+
+    \item After the project has been completed, how will the data be stored for the long-term and made available for the use by third parties? To whom will the data be accessible?
+    \vspace{6pt}
+    \item[] Text.
+    \vspace{6pt}
+
+    \item Which facilities (ICT, (secure) archive, refrigerators or legal expertise) do you expect will be needed for the storage of data during the research and after the research? Are these available?
+    \vspace{6pt}
+    \item[] Text.
+    \vspace{6pt}
 \end{enumerate}
 
 
+%%% Local Variables: 
+%%% coding: utf-8
+%%% mode: latex
+%%% TeX-engine: xetex
+%%% TeX-master: "NWO_template"
+%%% End: 
