--- a/3_budget.tex
+++ b/3_budget.tex
@@ -1,63 +1,45 @@
 \section{Budget}\label{sec:budget}
 
-\subsection{Budget table}\label{sec:budgettab}
-%The maximum amount of a Veni grant is € 280,000, to be spent over a period of three years. If the proposed research is of shorter duration, the maximum grant amount will be reduced accordingly.
+\subsection{Budget}\label{sec:budgettab}
+% The maximum amount of a Vidi grant is € 800,000, to be spent over a maximum period of five years. If the proposed research is of shorter duration, the maximum grant amount will be reduced accordingly.
 
-\begin{tabular}[c]{|w{2.4cm}|p{1.9cm}|o{0.57cm}|o{1.1cm}|q{1.2cm}|q{1.2cm}|q{1.2cm}|q{1.2cm}|q{1.3cm}|}
+\begin{tabular}[l]{|m{2.2cm}|m{1.7cm}|m{0.9cm}|m{1.1cm}|m{1.0cm}|m{1.0cm}|m{1.0cm}|m{1.0cm}|m{1.0cm}|m{1.0cm}|}
     \hline
-    \rowcolor{nwoshade} \multicolumn{9}{|c|}{\bth{Budget requested from NWO}}\\
+    \rowcolor{nwoshade} & \multicolumn{3}{c|}{\nth{\textbf{Description}}} & \nth{\textbf{Year 1}} & \nth{\textbf{Year 2}} & \nth{\textbf{Year 3}} & \nth{\textbf{Year 4}} & \nth{\textbf{Year 5}} & \nth{\textbf{Total}} \\
     \hline
-    \rowcolor{nwoshade} & \multicolumn{3}{c|}{\nth{Description}} & \centering\nth{Project Year 1} & \centering\nth{Project Year 2} & \centering\nth{Project Year 3} & \centering\nth{Project Year 4} & \nth{Total} \\
+    \rowcolor{nwoshade} \nth{\textbf{Staff}}& & \nth{\textbf{FTE**}} & \nth{\textbf{Months}} & & & & & &\\
     \hline
-    \rowcolor{nwoshade} \nth{Staff}& & \nth{FTE} & \nth{Total Months} & & & & &\\
+    \nth{WP*} & \nth{Applicant} & & & & & & & & \\
     \hline
-    \nth{WP*} & Applicant & & & & & & & \\
+    \nth{NWP*} & & & & & & & & &\\
     \hline
-    \nth{NWP*} & & & & & & & &\\
+    \nth{\textbf{Total Staff}} & & & & & & & & & \\
     \hline
-    \nth{Total Staff} & & & & & & & & \\
+    \nth{Equipment} &\multicolumn{3}{l|}{} & & & & & & \\
     \hline
-    \nth{Equipment} &\multicolumn{3}{l|}{} & & & & & \\
+    \nth{Investments} &\multicolumn{3}{l|}{} & & & & & & \\
     \hline
-    \nth{Investments} &\multicolumn{3}{l|}{} & & & & & \\
+    \nth{Consumables} &\multicolumn{3}{l|}{} & & & & & & \\
     \hline
-    \nth{Consumables} &\multicolumn{3}{l|}{} & & & & & \\
+    \nth{Travel} & \multicolumn{3}{l|}{} &  &  &  &  & & \\
     \hline
-    \nth{Travel} & \multicolumn{3}{l|}{} &  &  &  &  & \\
-    \hline
-    \nth{Other} & \multicolumn{3}{l|}{} & & & & & \\
+    \nth{Other} & \multicolumn{3}{l|}{} & & & & & & \\
     \hline 
-    \nth{Total Materials} & \multicolumn{3}{l|}{} & & & & & \\
+    \nth{\textbf{Total Materials}} & \multicolumn{3}{l|}{} & & & & & & \\
     \hline
-    \multicolumn{4}{|c|}{\cellcolor{nwoshade}\nth{Total requested from NWO}} & & & & & \\
+    \multicolumn{4}{|l|}{\cellcolor{nwoshade}\nth{\textbf{Grand total}}} & & & & & & \\
     \hline
 \end{tabular}
 \vspace{1\baselineskip}
 
+% Explanation of the budget-table:
+%     • Use one row each for each staff member, type of equipment, type of investment or type of material (e.g., data management costs). Additional rows (as many as you need) should be added underneath the bold print headings, listing all persons and items separately. You should not add headings.
+%     • In case of contributions in kind and/or in cash, these should be listed in a transparent and identifiable manner;
+%     • Years are Project Years. For example: if your intended starting date is 1 July 2023, then Year 1 ranges from 1 July 2023 to 30 June 2024.
+%     • The Explanatory Notes mention which costs can be covered under the Vidi scheme. Costs for infrastructure (accommodation and office automation, such as computers or laptops) are non-reimbursable. Total FTE applicant (Vidi + other tasks/projects) cannot exceed 1.0 FTE at any time during the project.
 
-\begin{tabular}[c]{|w{4.8cm}|p{3.54cm}|o{2.6cm}|o{3.3cm}|}
-    \hline
-    \rowcolor{nwoshade} \multicolumn{4}{|c|}{\nth{Total time spent on Veni project}}\\
-    \hline
-    \rowcolor{nwoshade} \nth{Staff} &  & \nth{FTE**} & \nth{Total Months} \\
-    \hline
-     & & & \\
-    \hline
-\end{tabular}
-
-\vspace{1\baselineskip}
-%Please note:
-%\begin{itemize}
-%    \item[--] Use one row each for each staff member, type of equipment, type of investment or type of material (e.g., data management costs). Additional rows (as many as you need) should be added underneath the bold print headings, listing all persons and items separately. You should not add headings.
-%    \item[--] Years are Project Years. For example: if your intended starting date is 1 February 2022, then Year 1 ranges from 1 February 2022 to 31 January 2023.
-%    \item[--] The Explanatory Notes mention which costs can be covered under budget requested from NWO in the Veni scheme. Costs for infrastructure (accommodation and office automation, such as pc’s or laptops) are non- reimbursable.
-%    \item[--] Total FTE applicant (Veni + other tasks/projects) cannot exceed 1.0 FTE at any time during the project.
-%    \vspace{\baselineskip}
-
-%    \item[*] WP = Scientific staff; NWP = Non-scientific staff; please also list the nature of the post (for example PhD student or postdoc researcher)
-%    \item[**] Please list the time you will spend on your Veni, including any FTE percentage that your host institution will pay of your salary for your work on this Veni project. 
-%\end{itemize}
-
+% *  	WP = Scientific staff; NWP = Non-scientific staff; please also list the nature of the post (for example PhD student or postdoc researcher)
+% **	Please list the time you will spend on your Vidi, including any FTE percentage that your host institution will pay of your salary for your work on this Vidi project. If your university pays for (part of) the time you spend on your Vidi, please include this information in section 3b.
 \subsection{Contributions `in kind'}\label{sec:inkind}
 
 \begin{tabular}[c]{|o{3.6cm}|p{6.5cm}|o{4.6cm}|}
@@ -73,7 +55,7 @@
 
 \begin{tabular}[c]{|o{3.6cm}|o{6.5cm}|o{4.6cm}|}
     \hline
-    \rowcolor{nwoshade}\nth{Contributing party}&\nth{Description}&\nth{Estimated value in euros}\\
+    \rowcolor{nwoshade}\nth{Contributing party}&\nth{Description}&\nth{Value in euros}\\
     \hline
      & &\\
     \hline
@@ -81,19 +63,28 @@
 
 
 \subsection{Totals}\label{sec:totals}
+% Please calculate the total budget and the total amount requested from NWO. These amounts follow from sections 3a, 3b, and 3c.
 
 \begin{tabular}{|w{3.6cm}|p{11.54cm}|}
     \hline
-    \nth{Grand total} & (=3a+3b+3c)\\
+    \nth{Grand total} & (=3a)\\
     \hline
-    \nth{Requested budget} & (=3a)\\
+    \nth{Requested budget} & (=3a minus 3b and 3c)\\
     \hline
 \end{tabular}
 
 
-\subsection{Additional applications for this or an overlapping project}\label{sec:addapp}
-%Please include details of any additional (application for) funding for (part of) this research project, whether from NWO or from any other institution (e.g. ERC). 
+\subsection{Additional grants for this project}\label{sec:addapp}
 
-Have you applied for any additional grants for this project either from NWO or from any other institution, and/or has the same idea been submitted elsewhere? yes/no (If yes, please provide details)\\
+% Please include details of any additional (application for) funding for (part of) this research project, whether from NWO or from any other institution (e.g. ERC).
+
+% Have you applied for any additional grants for this project either from NWO or from any other institution, and/or has the same idea been submitted elsewhere? Yes/no (If yes, please provide details).
 \checkedbox No\\
 \checkbox Yes (please provide details)\\
+
+%%% Local Variables: 
+%%% coding: utf-8
+%%% mode: latex
+%%% TeX-engine: xetex
+%%% TeX-master: "NWO_template"
+%%% End: 
