--- a/5_administrative_details.tex
+++ b/5_administrative_details.tex
@@ -10,12 +10,6 @@
         \hline
         \nth{Title(s), initial(s), surname(s):} & \\
         \hline
-        \nth{Preferred language of correspondence\newline (choose one):} & \checkedbox[0pt] Dutch\hspace{2em}\checkbox[0pt] English\\
-        \hline
-        \nth{E-mail address (same as in ISAAC):} & \\
-        \hline
-        \nth{Telephone number:} & \\
-        \hline
     \end{tabularx}
 \end{center}
 
@@ -98,9 +92,9 @@
         \hline
         \nth{Teaching} & \\
         \hline
-        \nth{Care or sick leave} & \\
+        \nth{Leave} & \\
         \hline
-        \nth{Administrative tasks} & \\
+        \nth{Management tasks} & \\
         \hline
         \nth{Others (please specify):} & \\
         \hline
@@ -113,9 +107,16 @@
     \renewcommand{\arraystretch}{1.6}
     \begin{tabularx}{0.92\textwidth}{|p{14.27cm}|}
         \hline
-        \rowcolor{nwoshade} \nth{If applicable: You may mention special \ul{circumstances} (e.g. due to COVID-19) that account for a reduction in productivity (max. 100 words).:}\\
+        \rowcolor{nwoshade} \nth{If applicable:} Any special circumstances (e.g. due to COVID-19) that account for a reduction in productivity may be mentioned in the box underneath the calculation of months. The maximum word limit for this explanation is 100 words. Just like the number of months spent on research, this information will help the committee interpret your academic achievements and scientific output. Please note that you may not use this field to include additional publications that are not already mentioned in section 4b.\\
         \hline
         \\
         \hline
     \end{tabularx}
 \end{center}
+
+%%% Local Variables: 
+%%% coding: utf-8
+%%% mode: latex
+%%% TeX-engine: xetex
+%%% TeX-master: "NWO_template"
+%%% End: 
