--- a/6_statements_by_applicant.tex
+++ b/6_statements_by_applicant.tex
@@ -12,17 +12,15 @@ Check the relevant fields by adding an X. Note that ethical approval may also be
 \vspace{\baselineskip}
 
 \begin{center}
-    \begin{tabularx}{1\textwidth}{|n{5.8cm}|o{2cm}|o{2cm}|o{2cm}|o{2cm}|}
+    \begin{tabularx}{1\textwidth}{|n{5.8cm}|m{2cm}|m{2cm}|m{2cm}|m{2cm}|}
         \hline
         \rowcolor{nwoshade} & \nth{Not applicable} & \nth{Not yet\newline applied for} & \nth{Applied for} & \nth{Received}\\
         \hline
-        \nth{Approval from a medical ethics review committee} & \LARGE{$\times$} & & & \\
+        \nth{Approval from a recognised (medical) ethics review committee} & \LARGE{$\times$} & & & \\
         \hline
         \nth{Approval from an animal experiments committee} & \LARGE{$\times$}  & & & \\
         \hline
         \nth{Permission for research with the population screening Act} & \LARGE{$\times$}  & & & \\
-        \hline
-        \nth{Approval from any other recognised ethics review committee(s)} & \LARGE{$\times$} & & & \\
         \hline
     \end{tabularx}
 \end{center}\vspace{\baselineskip}
@@ -33,14 +31,22 @@ If your grant application is successful, all applicable ethical approval documen
 \subsection*{By submitting this form I declare that:}\label{sec:declaration}
 
 \checkedbox[0pt] I have completed this form truthfully;\\
-\checkedbox[0pt] I satisfy the nationally and internationally accepted standards for scientific conduct as stated in the\\
-\hspace*{2.15em} \href{https://www.nwo.nl/en/policies/scientific+integrity+policy/netherlands+code+of+conduct+for+research+integrity}{\color{black}\ul{Netherlands Code of Conduct for Research Integrity 2018}}.\\
-\checkedbox[0pt] I have submitted non-referees (no more than 3 in total).\\
-\checkedbox[0pt] I have submitted the completed and signed embedding guarantee.\\
-\checkedbox[0pt] If applicable: I have included authorised 3rd party letter(s), guaranteeing to meet part of the project costs.\\
+\checkedbox[0pt] By submitting this document, I declare that I satisfy the nationally and internationally accepted standards for scientific conduct as stated in the\\
+\hspace*{2.15em} \href{https://www.nwo.nl/en/netherlands-code-conduct-research-integrity}{\color{black}\ul{Netherlands Code of Conduct for Research Integrity 2018}}.\\
+\checkedbox[0pt] I have submitted the completed and signed embedding guarantee\\
+\checkedbox[0pt] If applicable: I have submitted non-referees in ISAAC.*\\
+\checkedbox[0pt] If applicable: I have included one or more authorised letters from the prospected host institution and/or a third party, guaranteeing to meet part of the costs of this research project.\\
 
 \begin{tab}[1.5]{p{3.5cm} p{13.15cm}}
-    \nth{Initial(s) and surname(s):} & \\
+    \nth{Name:} & \\
+    % Please refrain from using your first name to reduce gender effects.
     \nth{Place:} & \\
     \nth{Date:} & \\
 \end{tab}
+
+%%% Local Variables: 
+%%% coding: utf-8
+%%% mode: latex
+%%% TeX-engine: xetex
+%%% TeX-master: "NWO_template"
+%%% End: 
