--- a/NWO_template.tex
+++ b/NWO_template.tex
@@ -30,3 +30,9 @@ Science}
 \include{6_statements_by_applicant}
 
 \end{document}
+
+%%% Local Variables: 
+%%% coding: utf-8
+%%% mode: latex
+%%% TeX-engine: xetex
+%%% End: 
