--- a/4_curriculum_vitae.tex
+++ b/4_curriculum_vitae.tex
@@ -1,20 +1,20 @@
-\section{Curriculum vitae (weight: 40\%)}\label{sec:cv}
+\section{Curriculum vitae}\label{sec:cv}
 
 \newrefsection[{output.bib}]
 \newrefcontext[labelprefix={ko},sorting=ydnt]
 
 \subsection{Academic profile}\label{sec:profile}
-%\emph{Provide a comprehensive narrative of your academic achievements, research focus, research agenda, position in your (inter)national academic field, motivation, and the academic and societal potential of your work.}\\
+% Provide a comprehensive narrative of your academic achievements, research focus, research agenda, position in your (inter)national academic field, motivation, and the academic and societal potential of your work. Follow our guidelines for the use of quality indicators, see the General Notes. 
 
 \vspace{\baselineskip}
-(min. 400 -- max. 700 words)
+(Max. 1000 words)
 
 \vspace{\baselineskip}
-Word count:
+Wordcount:
 
 
 \subsection{Key output}
-%Provide the references to your key output (max. 10) and add a motivation for the selection of each of these items. Please number the items consecutively. You are allowed to use one hyperlink per item, that refers directly to the output (e.g. a DOI). You may not mention H-indexes, journal impact factors, or any other indicator or term that refers to the general quality or reputation of a journal, publisher, or publication platform, rather than to the individual output item. For more information expand the Explanatory Notes.\\
+% Provide the references to your key output (max. 10) and add a motivation for the selection of each of these items. Please number the items consecutively. You are allowed to use one hyperlink per item, that refers directly to the output (e.g. a DOI). You may not mention H-indexes, journal impact factors, or any other indicator or term that refers to the general quality or reputation of a journal, publisher, or publication platform, rather than to the individual output item. For more information expand the Explanatory Notes.
 
 \noprintbibliography
 
@@ -28,4 +28,11 @@ Word count:
 (Max. 10 items. Min. 400 words -- max. 700 words, excl. output titles and references to the output)
 
 \vspace{\baselineskip}
-Word count:
+Wordcount:
+
+%%% Local Variables: 
+%%% coding: utf-8
+%%% mode: latex
+%%% TeX-engine: xetex
+%%% TeX-master: "NWO_template"
+%%% End: 
