--- a/NWO_template.tex
+++ b/NWO_template.tex
@@ -11,12 +11,13 @@
 %\boldname{Last}{First}{Initials}
 
 \title{Grant application full proposal form}
-\subtitle{NWO Talent Programme --- Veni scheme}
+\subtitle{NWO Talent Programme --- Vidi scheme}
 \domain{Applied and Engineering Sciences\\
 Social Sciences and Humanities\\
-Science}
-\applicationyear{2021}
-\formversion{March 2021}
+Science\\
+Health Research and Development}
+\applicationyear{2022}
+\formversion{July 2022}
 
 
 \begin{document}
